# gizstrom

./: .gitignore  LICENSE  README.md  build_images.sh  build_images_debug.sh  docker-compose.yml  example.env  prek.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker.yml
assets/: architecture-v2.drawio  fti.drawio
example-data/: fronius_export.csv
infra/: create-buckets.yml  networks.yml
infra/airflow/: Dockerfile  docker-compose.yml
infra/app/: docker-compose.yml
infra/compute-instance/: docker-compose.yml  entrypoint.sh
infra/compute-instance/inference-endpoint/: docker-compose.yml
infra/feast/: Dockerfile  docker-compose.yml
infra/feast-ui/: docker-compose.yml
infra/feast/gizstrom/feature_repo/: feature_store.yaml
infra/inference-endpoint/: docker-compose.yml
infra/mlflow/: docker-compose.yml
infra/rustfs/: docker-compose.yml
src/app/: Dockerfile  main.py  pyproject.toml
src/app/static/: index.html  script.js
src/dags/: daily_feature_and_training.py  data_collection.py  example.py  test_dag.py
src/pipelines/: Dockerfile  main.py  pyproject.toml  test.py
src/pipelines/config/: feature_store.yaml
src/pipelines/feature_pipeline/feature_repo/: feature_definitions.py  feature_store.yaml
src/pipelines/pipelines/: data_collection_pipeline.py  feature_pipeline.py  inference_pipeline.py  training_pipeline.py  utils.py
terraform/: main.tf
